[package]
name = "steam-auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2"
reqwest = "0.11"
serde = { version = "1", features = ["derive"] }
serde_urlencoded = "0.7"
regex = "1.7"
lazy_static = "1.4"
