[package]
name = "steam-openid"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Simple Rust implementation of Steam OpenID."


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2"
reqwest = "0.11"
serde = { version = "1", features = ["derive"] }
serde_urlencoded = "0.7"
regex = "1.7"
lazy_static = "1.4"
